--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @import "../src/css/common_news.css";
 @import "../src/css/breaking_news.css";
 @import "../src/css/main_news.css";
+@import "../src/css/category_header.css";
+@import "../src/css/category_contents.css";
+@import "../src/css/column_contents.css";
 
 * {
   margin: 0;
@@ -161,4 +164,14 @@ input[type="tel"] {
   padding: 0;
   border: 0;
   clip: rect(0 0 0 0);
+}
+
+#root {
+  &:has(.box__category-wrap) {
+    header {
+      .box__header {
+        border-bottom: 0;
+      }
+    }
+  }
 }
