--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,12 +19,15 @@ header {
         }
       }
     }
-    .text__title {
+    .link__main {
       position: absolute;
-      top: 15px;
+      top: 0;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 16px;
+      padding: 15px;
+      .text__title {
+        font-size: 16px;
+      }
     }
     .button__search {
       position: absolute;
@@ -56,6 +59,7 @@ header {
       align-items: center;
       justify-content: space-between;
       .link__menu {
+        padding: 18px 18px 18px 0;
         font-size: 18px;
       }
       .button__toggle {
