--- a/src/css/keywords.css
+++ b/src/css/keywords.css
@@ -5,11 +5,8 @@
     padding-left: 20px;
     padding-right: 20px;
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
-    /* padding: 16px 0; */
-    /* gap: 16px; */
-    padding: 16px 20px;
+    padding: 10px 20px 16px;
   }
   .list-item {
     position: relative;
