--- a/src/css/issue.css
+++ b/src/css/issue.css
@@ -1,16 +1,120 @@
 .box__issue {
-  .text__title {
-    margin: 0 20px;
-    padding-top: 20px;
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 42px;
+  .box__issue-title {
+    .text__title {
+      margin: 0 20px;
+      padding-top: 20px;
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 42px;
+    }
+    .text__issue {
+      margin: 20px 20px 0;
+      padding: 35px 0;
+      border-top: 3px solid #151515;
+      font-size: 24px;
+      line-height: 32px;
+      text-align: center;
+    }
   }
-  .text__issue {
-    margin: 20px 20px 0;
-    padding: 35px 0;
+  .box__issue-contents {
+    margin: 0 20px;
     border-top: 3px solid #151515;
-    font-size: 24px;
-    line-height: 32px;
+    & > .text__title {
+      padding: 24px 0 15px;
+      line-height: 24px;
+      .text__emphasis {
+        font-weight: bold;
+        color: #4c70e8;
+      }
+    }
+    .list__issue {
+      & > .list-item {
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          left: 3px;
+          top: 0;
+          bottom: 0;
+          width: 1px;
+          background: #ddd;
+        }
+        &:first-child::before {
+          top: 28px;
+        }
+        .text__date {
+          position: relative;
+          padding: 14px 0 16px 20px;
+          font-size: 20px;
+          font-weight: 700;
+          color: #4c70e8;
+          line-height: 24px;
+          &::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 0;
+            width: 8px;
+            height: 8px;
+            border-radius: 8px;
+            background-color: #4c70e8;
+            transform: translateY(-50%);
+          }
+        }
+        .list__issue-perday {
+          padding-left: 22px;
+          & > .list-item {
+            padding: 11px 0 12px;
+            border-top: 1px solid #eee;
+            .link__news {
+              display: flex;
+              gap: 20px;
+              .box__info {
+                flex: 1;
+              }
+              .box__image {
+                width: 108px;
+                height: 72px;
+                overflow: hidden;
+                .image {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                }
+              }
+            }
+            &:last-child {
+              padding: 19px 0;
+            }
+          }
+        }
+        .text__title {
+          display: -webkit-box;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          font-size: 18px;
+          line-height: 26px;
+        }
+        .text__time {
+          font-size: 13px;
+          line-height: 20px;
+          margin-top: 4px;
+          color: #888;
+        }
+      }
+    }
+  }
+}
+
+#root {
+  &:has(.box__issue) {
+    .box__header {
+      border-bottom: 1px solid #eee;
+    }
+    .box__recent {
+      display: none;
+    }
   }
 }
