--- a/src/css/header.css
+++ b/src/css/header.css
@@ -166,3 +166,22 @@ header {
     transform: translateY(10%);
   }
 }
+
+#root {
+  &:has(.box__search-bar) {
+    position: relative;
+    header {
+      position: relative;
+      background-color: #fff;
+      z-index: 100;
+    }
+    .box__dimmed {
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
+  }
+}
