api 호출 바꾸고~ 귀염둥이 팝업 만들고~ 카테고리 연결중!

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 @import "../src/css/column_contents.css";
 @import "../src/css/issue.css";
 @import "../src/css/loading.css";
+@import "../src/css/mischief_popup.css";
 
 * {
   margin: 0;
@@ -169,6 +170,7 @@ input[type="tel"] {
 }
 
 #root {
+  position: relative;
   max-width: 768px;
   margin:0 auto;
   &:has(.box__category-wrap) {
