--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,10 +1,11 @@
 header {
   .box__header {
-    position: relative;
+    position: sticky;
     height: 55px;
     margin: 0 12px;
     font-size: 0;
     border-bottom: 3px solid #000;
+
     .button__menu {
       position: absolute;
       top: 8px;
@@ -12,49 +13,58 @@ header {
       width: 36px;
       height: 36px;
       background: url(../../image__menu.svg);
+
       &.button__menu-open {
         background: url(../../image__close.svg);
-        & ~ .box__weather,
-        & ~ .button__search {
+
+        &~.box__weather,
+        &~.button__search {
           display: none;
         }
       }
     }
+
     .link__main {
       position: absolute;
       top: 0;
       left: 50%;
       transform: translateX(-50%);
       padding: 15px;
+
       .text__title {
         font-size: 16px;
       }
     }
+
     .box__weather {
       position: absolute;
       top: 8px;
       right: 40px;
       width: 42px;
       overflow: hidden;
+
       .image {
         display: block;
         width: 28px;
         height: 28px;
         margin: 0 auto;
       }
+
       .text__temp {
         font-size: 10px;
         text-align: center;
         line-height: 1;
       }
-      &.box__weather--error{
-        .text{
+
+      &.box__weather--error {
+        .text {
           font-size: 10px;
           text-align: center;
           line-height: 42px;
         }
       }
     }
+
     .button__search {
       position: absolute;
       top: 8px;
@@ -62,67 +72,81 @@ header {
       width: 36px;
       height: 36px;
       background: url(../../image__search.svg);
+
       &.button__search--active {
         background: url(../../image__close.svg);
       }
     }
+
     &:has(.button__search--active) {
       .button__menu {
         display: none;
       }
     }
   }
+
   .box__menubar {
     position: relative;
     margin: 0 12px;
     background: #fff;
+
     .box__menu-wrap {
       border-bottom: 1px solid #eee;
     }
+
     .box__menu-inner {
       display: flex;
       height: 65px;
       align-items: center;
       justify-content: space-between;
+
       .link__menu {
         width: calc(100% - 32px);
         padding: 18px 18px 18px 0;
         font-size: 18px;
       }
+
       .button__toggle {
         width: 32px;
         height: 32px;
         background: url(../../image__plus.svg) no-repeat;
         background-position: center;
         animation: rotate-back 0.3s linear;
+
         &.button__toggle-active {
           animation: rotate 0.3s linear;
         }
       }
     }
+
     .box__submenu {
       display: none;
       animation: updown-back 0.3s linear;
+
       .list__submenu {
         display: flex;
         flex-wrap: wrap;
         padding-bottom: 8px;
+
         .list-item {
           flex: 1 1 50%;
           padding-top: 0;
           padding-bottom: 12px;
         }
       }
+
       &.box__submenu--active {
         display: block;
         animation: updown 0.3s linear;
       }
     }
   }
+
   .box__search-bar {
     width: 100%;
     margin: 0;
     padding: 16px 12px;
+
     .form__keyword {
       width: calc(100% - 68px);
       padding: 14px 16px 14px 24px;
@@ -132,6 +156,7 @@ header {
       font-size: 14px;
       line-height: 1;
     }
+
     .button__confirm {
       width: 60px;
       height: 46px;
@@ -141,6 +166,7 @@ header {
       color: #fff;
     }
   }
+
   &:has(.button__menu-open) {
     position: fixed;
     top: 0;
@@ -150,10 +176,12 @@ header {
     height: 100vh;
     background: #fff;
     z-index: 1;
-    & ~ .box__recent {
+
+    &~.box__recent {
       display: none;
     }
-    & ~ .box__breaking-news {
+
+    &~.box__breaking-news {
       display: none;
     }
   }
@@ -163,14 +191,17 @@ header {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(90deg);
   }
 }
+
 @keyframes rotate-back {
   0% {
     transform: rotate(90deg);
   }
+
   100% {
     transform: rotate(0deg);
   }
@@ -180,14 +211,17 @@ header {
   0% {
     transform: translateY(10%);
   }
+
   100% {
     transform: translateY(0);
   }
 }
+
 @keyframes updown-back {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(10%);
   }
@@ -196,14 +230,17 @@ header {
 #root {
   &:has(.box__search-bar) {
     position: relative;
+
     header {
       position: relative;
       background-color: #fff;
       z-index: 100;
-      .box__weather{
+
+      .box__weather {
         display: none;
       }
     }
+
     .box__dimmed {
       width: 100%;
       height: 100%;
@@ -211,6 +248,15 @@ header {
       position: fixed;
       top: 0;
       left: 0;
+    }
+  }
+
+  &.js-fixed {
+    header {
+      position: fixed;
+      width: 100%;
+      background: #fff;
+      z-index: 1;
     }
   }
 }
