--- a/src/css/breaking_news.css
+++ b/src/css/breaking_news.css
@@ -19,6 +19,7 @@
         top: 50%;
         left: 50%;
         width: 100%;
+        height: 100%;
         transform: translate(-50%, -50%);
       }
     }
