--- a/src/css/breaking_news.css
+++ b/src/css/breaking_news.css
@@ -21,6 +21,7 @@
         width: 100%;
         height: 100%;
         transform: translate(-50%, -50%);
+        object-fit: cover;
       }
     }
     .box__info {
@@ -85,7 +86,7 @@
   .box__breaking-news {
     .link__big-news {
       .box__image{
-        height: 200px;
+        height: 55vw;
       }
     }
   }
@@ -95,6 +96,15 @@
     .link__big-news {
       .box__image{
         height: 300px;
+      }
+    }
+  }
+ }
+ #root{
+  &.js-fixed{
+    .box__container{
+      .box__breaking-news{
+        padding-top: 70px;
       }
     }
   }
