--- a/src/css/issue.css
+++ b/src/css/issue.css
@@ -119,3 +119,13 @@
     }
   }
 }
+
+.box__noresult {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  .text {
+    font-size: 14px;
+  }
+}
