--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 @import "../src/css/loading.css";
 @import "../src/css/mischief_popup.css";
 @import "../src/css/menu_bar.css";
+@import "../src/css/signup.css";
 @import "../src/css/login.css";
 @import "../src/css/footer.css";
 
