--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 @import "../src/css/menu_bar.css";
 @import "../src/css/signup.css";
 @import "../src/css/login.css";
+@import "../src/css/interest.css";
 @import "../src/css/footer.css";
 
 * {
