--- a/src/css/breaking_news.css
+++ b/src/css/breaking_news.css
@@ -7,14 +7,17 @@
       }
     }
   }
-  .link__big-news {
+  .list-item{
+    position: relative;
+  }
+  .link__news {
     .box__image {
       position: relative;
       width: 100%;
       height: 200px;
       border-radius: 8px;
       overflow: hidden;
-      img {
+      .image {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -24,42 +27,54 @@
         object-fit: cover;
       }
     }
-    .box__info {
-      margin-top: 6px;
-      font-size: 0;
-      .box__title {
-        .tag__red {
-          margin-right: 6px;
-          margin-bottom: 3px;
-          padding: 3px 5px;
-          border-radius: 4px;
-          background-color: #f25050;
-          font-size: 13px;
-          line-height: 17px;
-        }
-        .text__title {
-          font-size: 24px;
-          line-height: 32px;
-          display: -webkit-box;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-          vertical-align: text-bottom;
-        }
+  }
+  .box__info {
+    margin-top: 6px;
+    font-size: 0;
+    .box__title {
+      .tag__red {
+        margin-right: 6px;
+        margin-bottom: 3px;
+        padding: 3px 5px;
+        border-radius: 4px;
+        background-color: #f25050;
+        font-size: 13px;
+        line-height: 17px;
       }
-      .text__description {
+      .text__title {
+        font-size: 24px;
+        line-height: 32px;
         display: -webkit-box;
-        padding-top: 10px;
-        font-size: 15px;
-        font-weight: 500;
-        color: #888;
-        line-height: 23px;
         overflow: hidden;
         text-overflow: ellipsis;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
+        vertical-align: text-bottom;
       }
+    }
+    .text__description {
+      display: -webkit-box;
+      padding-top: 10px;
+      font-size: 15px;
+      font-weight: 500;
+      color: #888;
+      line-height: 23px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+    }
+  }
+  .button__favorite {
+    position: absolute;
+    right: 10px;
+    top: 230px;
+    /* bottom: 10px; */
+    width: 24px;
+    height: 20px;
+    background: transparent;
+    .image {
+      width: 24px;
     }
   }
   .list__breaking-news {
@@ -82,30 +97,30 @@
     }
   }
 }
- @media all and (min-width: 360px){
+@media all and (min-width: 360px) {
   .box__breaking-news {
     .link__big-news {
-      .box__image{
+      .box__image {
         height: 55vw;
       }
     }
   }
- }
- @media all and (min-width: 768px){
+}
+@media all and (min-width: 768px) {
   .box__breaking-news {
     .link__big-news {
-      .box__image{
+      .box__image {
         height: 300px;
       }
     }
   }
- }
- #root{
-  &.js-fixed{
-    .box__container{
-      .box__breaking-news{
+}
+#root {
+  &.js-fixed {
+    .box__container {
+      .box__breaking-news {
         padding-top: 70px;
       }
     }
   }
- }
+}
