--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -30,8 +30,18 @@
       appearance: none;
     }
     .button__signup,
-    .button__login{
+    .button__login {
       height: 48px;
+      border-radius: 8px;
+      background-color: #e9e9e9;
+    }
+  }
+  .text__hi-there {
+    font-size: 16px;
+    margin-top: 50px;
+    & ~ .button__login {
+      height: 48px;
+      margin-top: 12px;
       border-radius: 8px;
       background-color: #e9e9e9;
     }
