--- a/src/css/category_contents.css
+++ b/src/css/category_contents.css
@@ -23,6 +23,7 @@
           overflow: hidden;
           .image {
             width: 100%;
+            height: 100%;
             position: absolute;
             top: 50%;
             left: 50%;
