--- a/src/css/interest.css
+++ b/src/css/interest.css
@@ -28,13 +28,19 @@
         }
       }
       .box__image {
+        position: relative;
         width: 108px;
         height: 72px;
         background: #9e9e9e;
         border-radius: 4px;
         overflow: hidden;
         .image {
+          position: absolute;
           width: 100%;
+          height: 100%;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
         }
       }
     }
