--- a/src/css/keywords.css
+++ b/src/css/keywords.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   .list__recent {
     max-width: 768px;
-    margin: 16px 0;
+    padding: 16px 0;
     overflow-x: scroll;
     overflow-y: hidden;
     scroll-behavior: smooth;
@@ -25,7 +25,7 @@
       line-height: 20px;
       vertical-align: top;
     }
-    .button__close{
+    .button__close {
       width: 16px;
       height: 16px;
       margin-top: 3px;
