다크모드, css 변수화, 같이 사용할 수 있는거 묶음

--- a/src/css/category_header.css
+++ b/src/css/category_header.css
@@ -5,7 +5,7 @@
     padding-bottom: 3px;
     font-size: 32px;
     font-weight: 700;
-    color: #151515;
+    color: var(--gray-900);
     line-height: 42px;
   }
   .list__sub-category {
@@ -21,12 +21,12 @@
           padding: 5px 0;
           font-size: 17px;
           font-weight: 600;
-          color: #aaa;
+          color: var(--gray-600);
           line-height: 22px;
         }
         &.link__category--selected {
           .text {
-            color: #151515;
+            color: var(--gray-900);
           }
         }
       }
