--- a/src/css/account_form.css
+++ b/src/css/account_form.css
@@ -22,7 +22,7 @@
       width: 100%;
       height: 40px;
       border: 0;
-      border-bottom: 1px solid #e9e9e9;
+      border-bottom: 1px solid var(--gray-300);
       font-size: 16px;
       font-weight: 400;
       line-height: 40px;
@@ -33,7 +33,7 @@
     .button__login {
       height: 48px;
       border-radius: 8px;
-      background-color: #e9e9e9;
+      background-color: var(--gray-300);
     }
   }
   .text__hi-there {
@@ -43,7 +43,7 @@
       height: 48px;
       margin-top: 12px;
       border-radius: 8px;
-      background-color: #e9e9e9;
+      background-color: var(--gray-300);
     }
   }
 }
