--- a/src/css/breaking_news.css
+++ b/src/css/breaking_news.css
@@ -33,33 +33,31 @@
   .box__info {
     margin-top: 6px;
     font-size: 0;
-    .box__title {
-      .tag__red {
-        margin-right: 6px;
-        margin-bottom: 3px;
-        padding: 3px 5px;
-        border-radius: 4px;
-        background-color: #f25050;
-        font-size: 13px;
-        line-height: 17px;
-      }
-      .text__title {
-        font-size: 24px;
-        line-height: 32px;
-        display: -webkit-box;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        vertical-align: text-bottom;
-      }
+    .tag__red {
+      margin-right: 6px;
+      margin-bottom: 3px;
+      padding: 3px 5px;
+      border-radius: 4px;
+      background-color: var(--red-500);
+      font-size: 13px;
+      line-height: 17px;
+    }
+    .text__title {
+      font-size: 24px;
+      line-height: 32px;
+      display: -webkit-box;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      vertical-align: text-bottom;
     }
     .text__description {
       display: -webkit-box;
       padding-top: 10px;
       font-size: 15px;
       font-weight: 500;
-      color: #888;
+      color: var(--gray-700);
       line-height: 23px;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -93,7 +91,7 @@
         width: 4px;
         height: 4px;
         border-radius: 50%;
-        background-color: #444;
+        background-color: var(--gray-800);
       }
     }
   }
@@ -113,6 +111,7 @@
     }
   }
 }
+
 #root {
   &.js-fixed {
     .box__container {
