--- a/src/css/category_contents.css
+++ b/src/css/category_contents.css
@@ -4,18 +4,21 @@
   .text__title {
     padding: 14px 0 16px;
     font-size: 20px;
-    color: #151515;
+    color: var(--gray-900);
     line-height: 24px;
   }
   .box__inner {
     padding: 20px;
     border-radius: 8px;
-    background: #f5f5f5;
+    background: var(--gray-100);
     .list__articles {
       overflow: hidden;
       .list-item {
         padding: 19px 0 20px;
-        border-bottom: 1px solid #e2e2e2;
+        border-bottom: 1px solid var(--gray-450);
+        .box__card {
+          position: relative;
+        }
         .box__image {
           position: relative;
           height: 200px;
@@ -34,6 +37,7 @@
         .box__info {
           margin-top: 14px;
           .text__title {
+            padding: 0;
             -webkit-line-clamp: 3;
             font-size: 24px;
             line-height: 32px;
@@ -47,13 +51,24 @@
             padding-top: 10px;
             font-size: 15px;
             font-weight: 500;
-            color: #888;
+            color: var(--gray-700);
             line-height: 23px;
             display: -webkit-box;
             overflow: hidden;
             text-overflow: ellipsis;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
+          }
+        }
+        .button__favorite {
+          position: absolute;
+          right: 10px;
+          top: 158px;
+          width: 32px;
+          height: 32px;
+          background: transparent;
+          .image {
+            width: 100%;
           }
         }
         &:first-child {
