--- a/src/css/column_contents.css
+++ b/src/css/column_contents.css
@@ -1,18 +1,18 @@
 .box__column-contents {
   margin: 0 20px;
-  border-top: 2px solid #151515;
+  border-top: 2px solid var(--gray-900);
   .text__title {
     padding: 14px 0 16px;
     font-size: 20px;
     font-weight: 700;
-    color: #151515;
+    color: var(--gray-900);
     line-height: 24px;
   }
   .list__articles {
     padding: 10px 0 30px;
     .list-item {
       padding: 24px 0 32px;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid var(--gray-400);
       .link__article {
         display: flex;
         gap: 16px;
@@ -34,7 +34,7 @@
             padding-bottom: 4px;
             font-size: 14px;
             font-weight: 600;
-            color: #ba9571;
+            color: var(--brown-500);
             line-height: 20px;
           }
           .text__summary {
