--- a/src/css/common_news.css
+++ b/src/css/common_news.css
@@ -5,7 +5,7 @@
     margin-bottom: 1px;
     padding: 0 4px;
     border-radius: 2px;
-    background-color: #f25050;
+    background-color: var(--red-500);
     font-size: 12px;
     font-weight: 600;
     color: #fff;
@@ -18,7 +18,7 @@
     margin-bottom: 1px;
     padding: 0 4px;
     border-radius: 2px;
-    background-color: #4c70e8;
+    background-color: var(--blue-500);
     font-size: 12px;
     font-weight: 600;
     color: #fff;
