--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,19 +4,21 @@ header {
     height: 55px;
     margin: 0 12px;
     font-size: 0;
-    border-bottom: 3px solid #000;
-
+    border-bottom: 3px solid var(--Black);
     .button__menu {
       position: absolute;
-      top: 8px;
+      top: 10px;
       left: 0;
       width: 36px;
       height: 36px;
-      background: url(../../image__menu.svg);
-
+      .image {
+        width: 26px;
+        height: 30px;
+      }
       &.button__menu-open {
-        background: url(../../image__close.svg);
-
+        .image{
+          width: 30px;
+        }
         & ~ .box__weather,
         & ~ .button__search,
         & ~ .button__login {
@@ -24,39 +26,33 @@ header {
         }
       }
     }
-
     .link__main {
       position: absolute;
       top: 0;
       left: 50%;
       transform: translateX(-50%);
       padding: 15px;
-
       .text__title {
         font-size: 16px;
       }
     }
-
     .box__weather {
       position: absolute;
       top: 8px;
       left: 40px;
       width: 42px;
       overflow: hidden;
-
       .image {
         display: block;
         width: 28px;
         height: 28px;
         margin: 0 auto;
       }
-
       .text__temp {
         font-size: 10px;
         text-align: center;
         line-height: 1;
       }
-
       &.box__weather--error {
         .text {
           font-size: 10px;
@@ -65,9 +61,20 @@ header {
         }
       }
     }
+    .button__dark {
+      position: absolute;
+      top: 8px;
+      left: 82px;
+      width: 40px;
+      height: 40px;
+      .image {
+        width: 24px;
+        height: 24px;
+      }
+    }
     .button__login {
       position: absolute;
-      top: 10px;
+      top: 8px;
       right: 40px;
       width: 36px;
       height: 36px;
@@ -83,52 +90,54 @@ header {
       right: 0;
       width: 36px;
       height: 36px;
-      background: url(../../image__search.svg);
-
+      .image{
+        width: 26px;
+        height: 26px;
+      }
       &.button__search--active {
-        background: url(../../image__close.svg);
+        .image{
+          width: 30px;
+          height: 30px;
+        }
       }
     }
-
     &:has(.button__search--active) {
       .button__menu {
         display: none;
       }
     }
   }
-
   .box__search-bar {
     width: 100%;
     margin: 0;
     padding: 16px 12px;
-
     .form__keyword {
       width: calc(100% - 68px);
       padding: 14px 16px 14px 24px;
       border: 0;
       border-radius: 20px;
-      background: #f2f2f2;
+      background: var(--gray-200);
       font-size: 14px;
+      color: var(--gray-900);
       line-height: 1;
     }
-
     .button__confirm {
       width: 60px;
       height: 46px;
       margin-left: 8px;
       border-radius: 4px;
-      background-color: #000;
-      color: #fff;
+      background-color: var(--Black);
+      color: var(--White);
     }
   }
-  .button__logout{
+  .button__logout {
     position: absolute;
     top: 10px;
     right: 0;
     width: 36px;
     height: 36px;
     background: transparent;
-    .image{
+    .image {
       width: 36px;
       height: 22px;
     }
@@ -185,19 +194,19 @@ header {
 }
 
 #root {
+  position: relative;
+  max-width: 768px;
+  margin: 0 auto;
   &:has(.box__search-bar) {
     position: relative;
-
     header {
       position: relative;
-      background-color: #fff;
+      background-color: var(--White);
       z-index: 100;
-
       .box__weather {
         display: none;
       }
     }
-
     .box__dimmed {
       width: 100%;
       height: 100%;
@@ -206,16 +215,22 @@ header {
       top: 0;
       left: 0;
     }
+    &.js-fixed {
+      header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        max-width: 768px;
+        background: var(--White);
+        z-index: 1;
+      }
+    }
   }
-
-  &.js-fixed {
+  &:has(.box__category-wrap) {
     header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      max-width: 768px;
-      background: #fff;
-      z-index: 1;
+      .box__header {
+        border-bottom: 1px solid var(--gray-400);
+      }
     }
   }
 }
