--- a/src/css/interest.css
+++ b/src/css/interest.css
@@ -11,7 +11,7 @@
   padding: 0 16px 30px;
   .list-item {
     padding: 11px 0 12px;
-    border-top: 1px solid #eee;
+    border-top: 1px solid var(--gray-400);
     .link__news {
       display: flex;
       width: 100%;
@@ -31,7 +31,7 @@
         position: relative;
         width: 108px;
         height: 72px;
-        background: #9e9e9e;
+        background: var(--gray-650);
         border-radius: 4px;
         overflow: hidden;
         .image {
