--- a/src/css/issue.css
+++ b/src/css/issue.css
@@ -11,7 +11,7 @@
     .text__issue {
       margin: 20px 20px 0;
       padding: 35px 0;
-      border-top: 3px solid #151515;
+      border-top: 3px solid var(--gray-900);
       font-size: 24px;
       line-height: 32px;
       text-align: center;
@@ -19,13 +19,13 @@
   }
   .box__issue-contents {
     margin: 0 20px;
-    border-top: 3px solid #151515;
+    border-top: 3px solid var(--gray-900);
     & > .text__title {
       padding: 24px 0 15px;
       line-height: 24px;
       .text__emphasis {
         font-weight: bold;
-        color: #4c70e8;
+        color: var(--blue-500);
       }
     }
     .list__issue {
@@ -38,7 +38,7 @@
           top: 0;
           bottom: 0;
           width: 1px;
-          background: #ddd;
+          background: var(--gray-500);
         }
         &:first-child::before {
           top: 28px;
@@ -48,7 +48,7 @@
           padding: 14px 0 16px 20px;
           font-size: 20px;
           font-weight: 700;
-          color: #4c70e8;
+          color: var(--blue-500);
           line-height: 24px;
           &::before {
             content: "";
@@ -58,7 +58,7 @@
             width: 8px;
             height: 8px;
             border-radius: 8px;
-            background-color: #4c70e8;
+            background-color: var(--blue-500);
             transform: translateY(-50%);
           }
         }
@@ -66,7 +66,7 @@
           padding-left: 22px;
           & > .list-item {
             padding: 11px 0 12px;
-            border-top: 1px solid #eee;
+            border-top: 1px solid var(--gray-400);
             .link__news {
               display: flex;
               gap: 20px;
@@ -102,7 +102,7 @@
           font-size: 13px;
           line-height: 20px;
           margin-top: 4px;
-          color: #888;
+          color: var(--gray-700);
         }
       }
     }
@@ -112,7 +112,7 @@
 #root {
   &:has(.box__issue) {
     .box__header {
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid var(--gray-400);
     }
     .box__recent {
       display: none;
