--- a/src/css/keywords.css
+++ b/src/css/keywords.css
@@ -30,6 +30,10 @@
       height: 16px;
       margin-top: 3px;
       background-color: transparent;
+      .image{
+        width: 100%;
+        height: 100%;
+      }
     }
     &::after {
       content: "";
@@ -37,7 +41,7 @@
       right: 0;
       top: 4px;
       height: 14px;
-      border-right: 1px solid #ddd;
+      border-right: 1px solid var(--gray-500);
     }
     &:last-child {
       padding-right: 0;
