--- a/src/css/menu_bar.css
+++ b/src/css/menu_bar.css
@@ -2,23 +2,20 @@
   position: relative;
   margin: 0 12px;
   padding-bottom: 30px;
-  background: #fff;
-  animation: slideUp 1s ease-out forwards;
+  background: var(--White);
+  animation: slideUp 1s var(---ease-smooth) forwards;
   z-index: 1;
   .box__menu-wrap {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid var(--gray-400);
   }
-
   .box__menu-inner {
     display: flex;
     height: 65px;
     align-items: center;
     justify-content: space-between;
-
     .link__menu {
       position: relative;
       width: 100%;
-      /* width: calc(100% - 32px); */
       padding: 18px;
       font-size: 18px;
       &::after{
@@ -30,42 +27,36 @@
         height: 32px;
         background: url(../../image__plus.svg) no-repeat;
         background-position: center;
-        animation: rotate-back 0.3s linear;
+        animation: rotate-back var(--anim-medium) linear;
       }
     }
-
     /* .button__toggle {
       width: 32px;
       height: 32px;
       background: url(../../image__plus.svg) no-repeat;
       background-position: center;
       animation: rotate-back 0.3s linear;
-
       &.button__toggle-active {
         animation: rotate 0.3s linear;
       }
     } */
   }
-
   .box__submenu {
     display: none;
-    animation: updown-back 0.3s linear;
-
+    animation: updown-back var(--anim-medium) linear;
     .list__submenu {
       display: flex;
       flex-wrap: wrap;
       padding-bottom: 8px;
-
       .list-item {
         flex: 1 1 50%;
         padding-top: 0;
         padding-bottom: 12px;
       }
     }
-
     &.box__submenu--active {
       display: block;
-      animation: updown 0.3s linear;
+      animation: updown var(--anim-medium) linear;
     }
   }
 }
