--- a/src/css/keywords.css
+++ b/src/css/keywords.css
@@ -43,6 +43,9 @@
       height: 14px;
       border-right: 1px solid var(--gray-500);
     }
+    &:first-child{
+      padding-left: 0;
+    }
     &:last-child {
       padding-right: 0;
       &::after {
