--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 
 :root {
-  --Font: -apple-system, BlinkMacSystemFont, Apple SD Gothic Neo, Roboto,
-    Noto Sans CJK KR, Tahoma, "Noto Sans KR", sans-serif;
+  --Font: -apple-system, BlinkMacSystemFont, Apple SD Gothic Neo, Roboto, Noto Sans CJK KR, Tahoma, "Noto Sans KR", sans-serif;
 
   --White: #ffffff;
   --gray-100: #f5f5f5;
@@ -46,7 +45,7 @@
   --White: #1c1c1c;
   --gray-100: #2a2a2a;
   --gray-200: #333333;
-  --gray-300: #3d3d3d;
+  --gray-300: #f5f5f5;
   --gray-400: #444444;
   --gray-450: #4a4a4a;
   --gray-500: #555555;
