--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,11 @@
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 55px;
+  z-index: 100;
+  background-color: var(--White);
   .box__header {
     position: sticky;
     width: calc(100% - 24px);
@@ -196,9 +202,7 @@ header {
   &:has(.box__search-bar) {
     position: relative;
     header {
-      position: relative;
       background-color: var(--White);
-      z-index: 100;
       .box__weather {
         display: none;
       }
