--- a/src/css/menu_bar.css
+++ b/src/css/menu_bar.css
@@ -18,15 +18,12 @@
       width: 100%;
       padding: 18px;
       font-size: 18px;
-      &::after{
-        content: "";
+      .image{
         position: absolute;
         right: 10px;
-        top: 13px;
-        width: 32px;
-        height: 32px;
-        background: url(../../image__plus.svg) no-repeat;
-        background-position: center;
+        top: 18px;
+        width: 22px;
+        height: 22px;
         animation: rotate-back var(--anim-medium) linear;
       }
     }
