--- a/src/css/category_header.css
+++ b/src/css/category_header.css
@@ -1,6 +1,6 @@
 .box__category-wrap {
   margin: 0 20px;
-  border-bottom: 3px solid #000;
+  border-bottom: 2px solid var(--Black);
   .text__title {
     padding-bottom: 3px;
     font-size: 32px;
