--- a/src/css/breaking_news.css
+++ b/src/css/breaking_news.css
@@ -16,17 +16,13 @@
     .box__image {
       position: relative;
       width: 100%;
-      height: 200px;
       border-radius: 8px;
       overflow: hidden;
       .image {
-        position: absolute;
-        top: 50%;
-        left: 50%;
         width: 100%;
         height: 100%;
-        transform: translate(-50%, -50%);
         object-fit: cover;
+        aspect-ratio: 16 / 9;
       }
     }
   }
@@ -96,19 +92,3 @@
     }
   }
 }
-
-@media all and (min-width: 768px) {
-  .box__breaking-news {
-    .box__card{
-      .link__news {
-        .box__image {
-          height: 300px;
-        }
-      }
-      .button__favorite{
-        top: 258px;
-      }
-    }
-  }
-}
-
