--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,19 +2,21 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  width: calc(100% - 24px);
+  width: 100%;
   height: 55px;
-  margin: 0 12px;
   z-index: 100;
-  border-bottom: 3px solid var(--Black);
   background-color: var(--White);
+  max-width: 768px;
+  left: 50%;
+  transform: translateX(-50%);
+  overflow: hidden;
   .box__header {
     position: sticky;
-    width: 100%;
-    max-width: 768px;
+    width: calc(100% - 24px);
     height: 55px;
-    margin: 0 auto;
+    margin: 0 12px;
     font-size: 0;
+    border-bottom: 3px solid var(--Black);
     .button__menu {
       position: absolute;
       top: 10px;
@@ -110,12 +112,6 @@ header {
           width: 30px;
           height: 30px;
         }
-      }
-    }
-    &:has(.button__search--active) {
-      .button__menu,
-      .button__dark {
-        display: none;
       }
     }
   }
@@ -223,13 +219,7 @@ header {
       .box__header {
         position: fixed;
         top: 0;
-        left: 50%;
-        width: calc(100% - 24px);
         max-width: 768px;
-        border-bottom: 3px solid var(--Black);
-        background: var(--White);
-        transform: translateX(-50%);
-        z-index: 1;
       }
       .box__search-bar {
         position: fixed;
@@ -238,6 +228,15 @@ header {
     }
     &:has(.box__recent) {
       padding-top: 20px;
+    }
+  }
+  &:has(.button__search--active) {
+    .button__menu,
+    .button__dark {
+      display: none;
+    }
+    header {
+      height: 139px;
     }
   }
 }
