--- a/src/css/keywords.css
+++ b/src/css/keywords.css
@@ -1,3 +1,4 @@
+/* 최근 검색어 */
 .box__recent {
   width: 100%;
   padding: 0 20px;
@@ -52,5 +53,69 @@
         content: none;
       }
     }
+  }
+}
+
+/* 메뉴바 */
+.box__menubar {
+  position: relative;
+  height: calc(100vh - 55px);
+  margin: 0 12px;
+  padding-bottom: 30px;
+  background: var(--White);
+  animation: slideUp 1s var(---ease-smooth) forwards;
+  z-index: 1;
+  .box__menu-wrap {
+    border-bottom: 1px solid var(--gray-400);
+  }
+  .box__menu-inner {
+    display: flex;
+    height: 65px;
+    align-items: center;
+    justify-content: space-between;
+    .link__menu {
+      position: relative;
+      width: 100%;
+      padding: 18px;
+      font-size: 18px;
+      .image{
+        position: absolute;
+        right: 10px;
+        top: 18px;
+        width: 22px;
+        height: 22px;
+        animation: rotate-back var(--anim-medium) linear;
+      }
+    }
+  }
+  .box__submenu {
+    display: none;
+    animation: updown-back var(--anim-medium) linear;
+    .list__submenu {
+      display: flex;
+      flex-wrap: wrap;
+      padding-bottom: 8px;
+      .list-item {
+        flex: 1 1 50%;
+        padding-top: 0;
+        padding-bottom: 12px;
+      }
+    }
+    &.box__submenu--active {
+      display: block;
+      animation: updown var(--anim-medium) linear;
+    }
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    height: 0;
+  }
+  50%{
+    height: 50%;
+  }
+  100% {
+    height: 100%;
   }
 }
