--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,128 @@
 @import "../src/css/common.css";
 @import "../src/css/reset.css";
-
 @import "../src/css/header.css";
+@import "../src/css/footer.css";
 @import "../src/css/keywords.css";
 @import "../src/css/common_news.css";
 @import "../src/css/breaking_news.css";
-@import "../src/css/main_news.css";
-@import "../src/css/category_header.css";
 @import "../src/css/category_contents.css";
 @import "../src/css/column_contents.css";
 @import "../src/css/issue.css";
-@import "../src/css/loading.css";
 @import "../src/css/mischief_popup.css";
-@import "../src/css/menu_bar.css";
 @import "../src/css/account_form.css";
-@import "../src/css/interest.css";
-@import "../src/css/footer.css";
 
 main {
   padding-top: 55px;
+  background-color: var(--White);
+  .box__container {
+    padding-top: 20px;
+    &:has(.box__recent) {
+      padding-top: 0;
+    }
+  }
+}
+
+.box__main-news {
+  padding: 0 16px 30px;
+  .list__main-news {
+    .list-item {
+      padding: 11px 0 12px;
+      border-top: 1px solid var(--gray-400);
+      .link__news {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        width: 100%;
+        .box__info {
+          width: calc(100% - 120px);
+          .text__title {
+            display: -webkit-box;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+          }
+        }
+        .box__image {
+          width: 108px;
+          height: 72px;
+          background: var(--gray-650);
+          border-radius: 4px;
+          overflow: hidden;
+          .image {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+
+/* 관심 */
+.box__interested {
+  .text__title {
+    margin: 0 20px;
+    padding-top: 20px;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 42px;
+  }
+  .list__interested {
+    padding: 0 16px 30px;
+    .list-item {
+      padding: 11px 0 12px;
+      border-top: 1px solid var(--gray-400);
+      .link__news {
+        display: flex;
+        width: 100%;
+        gap: 12px;
+        align-items: center;
+        .box__info {
+          width: calc(100% - 120px);
+          .text__title {
+            display: -webkit-box;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+          }
+        }
+        .box__image {
+          position: relative;
+          width: 108px;
+          height: 72px;
+          background: var(--gray-650);
+          border-radius: 4px;
+          overflow: hidden;
+          .image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            aspect-ratio: 16 / 9;
+          }
+        }
+      }
+    }
+  }
+}
+
+/* 로딩 */
+.box__loading {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  .text__icon {
+    font-size: 24px;
+    animation: rotate_image var(--anim-slow) linear infinite;
+  }
+  .text__loading {
+    font-size: 24px;
+  }
+}
+
+@keyframes rotate_image {
+  to {
+    transform: rotate(360deg);
+  }
 }
