관심 버튼 위치 수정 ResizeObserver, 뒤로가기 touchevent

--- a/src/css/category_contents.css
+++ b/src/css/category_contents.css
@@ -31,7 +31,7 @@
           }
         }
         .box__info {
-          margin-top: 14px;
+          padding-top: 14px;
           .text__title {
             padding: 0;
             -webkit-line-clamp: 3;
@@ -59,7 +59,6 @@
         .button__favorite {
           position: absolute;
           right: 10px;
-          top: 158px;
           width: 32px;
           height: 32px;
           background: transparent;
