--- a/src/css/breaking_news.css
+++ b/src/css/breaking_news.css
@@ -27,7 +27,7 @@
     }
   }
   .box__info {
-    margin-top: 6px;
+    padding-top: 6px;
     font-size: 0;
     .tag__red {
       margin-right: 6px;
@@ -65,7 +65,6 @@
   .button__favorite {
     position: absolute;
     right: 10px;
-    top: 158px;
     width: 32px;
     height: 32px;
     background: transparent;
