--- a/src/css/account_form.css
+++ b/src/css/account_form.css
@@ -25,7 +25,7 @@
       border: 0;
       border-bottom: 1px solid var(--gray-300);
       background: none;
-      padding: 10px;
+      padding: 10px 10px 10px 5px;
       font-size: 16px;
       font-weight: 400;
       color: var(--Black);
@@ -47,7 +47,7 @@
       }
     }
     .text__err{
-      margin: -10px 0 20px;
+      margin: -10px 0 20px 5px;
       font-size: 14px;
       color: var(--red-500);
     }
