--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 @import "../src/css/detail_pages.css";
 
 main {
+  height: 100vh;
   padding-top: 55px;
   background-color: var(--White);
   .box__container {
@@ -63,18 +64,25 @@ main {
 
 /* 관심 */
 .box__interested {
-  .text__title {
+  .box__title {
+    display: flex;
     margin: 0 20px;
     padding-top: 20px;
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 42px;
+    justify-content: space-between;
+    .text__title{
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 42px;
+    }
   }
   .list__interested {
     padding: 0 16px 30px;
     .list-item {
+      display: flex;
+      gap: 10px;
       padding: 11px 0 12px;
       border-top: 1px solid var(--gray-400);
+      align-items: center;
       .link__news {
         display: flex;
         width: 100%;
@@ -103,6 +111,14 @@ main {
             object-fit: cover;
             aspect-ratio: 16 / 9;
           }
+        }
+      }
+      .button__delete{
+        width: 30px;
+        height: 30px;
+        .image{
+          width: 100%;
+          height: 100%;
         }
       }
     }
